--- a/Vistas/winABMCategorias.xaml
+++ b/Vistas/winABMCategorias.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Vistas.winABMCategorias"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="winABMCategorias"  MinHeight="520" MinWidth="500" Height="520" Width="500" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
@@ -50,18 +51,24 @@
                     <ColumnDefinition Width="50*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="Categorías" Style="{StaticResource FormTitle}" FontSize="26" HorizontalAlignment="Left" Margin="20,0,0,10"></Label>
-
-                <Button Grid.Column="1" x:Name="btnAddCat" HorizontalAlignment="Right" ToolTip="Agregar una nueva categoría" Content="+ Nueva Categoría" Margin="20,0" Height="30" Width="140" Click="btn_NuevaCategoria" Style="{StaticResource ButtonFormBlack}" ></Button>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="Cubes" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Categorías" Style="{StaticResource FormTitle}" FontSize="26"></Label>
+                </DockPanel>
+                
+                <Button Grid.Column="1" x:Name="btnAddCat" HorizontalAlignment="Right" ToolTip="Agregar una nueva categoría" Content="+ Nueva Categoría" Margin="20,0" Click="btn_NuevaCategoria" Style="{StaticResource ButtonFormBlack}" ></Button>
             </Grid>
 
             <StackPanel Grid.Row="1">
-                <Label Content="Buscar por categoría:" HorizontalAlignment="center" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                <DockPanel HorizontalAlignment="center">
+                    <fa:ImageAwesome Icon="Search" Foreground="#bfbfbf" Height="20" HorizontalAlignment="Center"></fa:ImageAwesome>
+                    <Label Content="Buscar por categorías:" HorizontalAlignment="Left" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                </DockPanel>
                 <TextBox Margin="10,0" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
             </StackPanel>
 
 
-            <ListView Grid.Row="2" Name="lvwCategorias" Width="350" VerticalAlignment="Top" HorizontalAlignment="Center" Height="240" ItemsSource="{Binding Source= {StaticResource VISTA_CATEGORIAS}}" IsSynchronizedWithCurrentItem="True" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" >
+            <ListView Grid.Row="2" Name="lvwCategorias" Width="300" VerticalAlignment="Top" HorizontalAlignment="Center" Height="230" ItemsSource="{Binding Source= {StaticResource VISTA_CATEGORIAS}}" IsSynchronizedWithCurrentItem="True" Background="#232323"  Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" >
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
@@ -100,15 +107,29 @@
                 <ListView.View>
 
                     <GridView>
-                        <GridViewColumn Width="100" Header="ID" DisplayMemberBinding="{Binding Cat_Id}"/>
-                        <GridViewColumn Width="240" Header="Categoría" DisplayMemberBinding="{Binding Cat_Descrip}"/>
+                        <GridViewColumn Width="60" Header="ID" DisplayMemberBinding="{Binding Cat_Id}"/>
+                        <GridViewColumn Width="230" Header="Categoría" DisplayMemberBinding="{Binding Cat_Descrip}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
 
             <DockPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1">
-                <Button x:Name="btnModifCat" ToolTip="Actualizar la categoría seleccionada" Content="Actualizar Categoría" Margin="7" Height="40" Width="150" Click="btn_ModifCategoria" Style="{StaticResource ButtonFormBlack}"></Button>
-                <Button x:Name="btnDeleteCat" ToolTip="Eliminar la categoría seleccionada" Content="Eliminar Categoría" Margin="7" Height="40" Width="150" Click="btn_ElimCategoria" Style="{StaticResource ButtonFormBlack}" Background="#880000" Foreground="#EEEEEE"></Button>
+                <Button x:Name="btnModifCat" Margin="7" ToolTip="Actualizar la categoría seleccionada" Click="btn_ModifCategoria" Style="{StaticResource ButtonFormBlack}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Pencil" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Actualizar Categoría" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                <Button x:Name="btnDeleteCat" Margin="7" ToolTip="Eliminar la categoría seleccionada" Click="btn_ElimCategoria" Style="{StaticResource ButtonFormRed}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Trash" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Eliminar Familia" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
             </DockPanel>
 
         </Grid>
