--- a/Vistas/winABMFamilias.xaml
+++ b/Vistas/winABMFamilias.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-        Title="winABMFamilias" MinHeight="520" MinWidth="500" Height="520" Width="500" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
+        Title="Familias" MinHeight="520" MinWidth="500" Height="520" Width="500" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
     <Window.Resources>
 
         <Style TargetType="ToolTip">
@@ -51,18 +52,23 @@
                     <ColumnDefinition Width="50*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="Familias" Style="{StaticResource FormTitle}" FontSize="26" HorizontalAlignment="Left" Margin="20,0,0,10"></Label>
-
-                <Button Grid.Column="1" x:Name="btnAddFam" HorizontalAlignment="Right" ToolTip="Agregar una nueva familia" Content="+ Nueva Familia" Margin="20,0" Height="30" Width="130" Click="btn_NuevaFamilia" Style="{StaticResource ButtonFormBlack}" ></Button>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="Glass" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Familias" Style="{StaticResource FormTitle}" FontSize="26"></Label>
+                </DockPanel>
+                <Button Grid.Column="1" x:Name="btnAddFam" HorizontalAlignment="Right" ToolTip="Agregar una nueva familia" Content="+ Nueva Familia" Margin="20,0" Click="btn_NuevaFamilia" Style="{StaticResource ButtonFormBlack}" ></Button>
             </Grid>
 
             <StackPanel Grid.Row="1">
-                <Label Content="Buscar por familia:" HorizontalAlignment="center" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                <DockPanel HorizontalAlignment="center">
+                    <fa:ImageAwesome Icon="Search" Foreground="#bfbfbf" Height="20" HorizontalAlignment="Center"></fa:ImageAwesome>
+                    <Label Content="Buscar por familias:" HorizontalAlignment="Left" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                </DockPanel>
                 <TextBox Margin="10,0" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
             </StackPanel>
 
 
-            <ListView Grid.Row="2" Name="lvwFamilias" Width="350" VerticalAlignment="Top" HorizontalAlignment="Center" Height="240" ItemsSource="{Binding Source= {StaticResource VISTA_FAMILIAS}}" IsSynchronizedWithCurrentItem="True" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" >
+            <ListView Grid.Row="2" Name="lvwFamilias" Width="300" VerticalAlignment="Top" HorizontalAlignment="Center" Height="230" ItemsSource="{Binding Source= {StaticResource VISTA_FAMILIAS}}" IsSynchronizedWithCurrentItem="True" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" >
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
@@ -101,15 +107,29 @@
                 <ListView.View>
                     
                     <GridView>
-                        <GridViewColumn Width="100" Header="ID" DisplayMemberBinding="{Binding Fam_Id}"/>
-                        <GridViewColumn Width="240" Header="Familia" DisplayMemberBinding="{Binding Fam_Descrip}"/>
+                        <GridViewColumn Width="60" Header="ID" DisplayMemberBinding="{Binding Fam_Id}"/>
+                        <GridViewColumn Width="230" Header="Familia" DisplayMemberBinding="{Binding Fam_Descrip}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
 
             <DockPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1">
-                <Button x:Name="btnModifFam" ToolTip="Actualizar la familia seleccionada" Content="Actualizar Familia" Margin="7" Height="40" Width="150" Click="btn_ModifFamilia" Style="{StaticResource ButtonFormBlack}"></Button>
-                <Button x:Name="btnDeleteFam" ToolTip="Eliminar la familia seleccionada" Content="Eliminar Familia" Margin="7" Height="40" Width="150" Click="btn_ElimFamilia" Style="{StaticResource ButtonFormBlack}" Background="#880000" Foreground="#EEEEEE"></Button>
+                <Button x:Name="btnModifFam" ToolTip="Actualizar la familia seleccionada" Margin="7" Height="40" Width="auto" Click="btn_ModifFamilia" Style="{StaticResource ButtonFormBlack}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Pencil" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Actualizar Familia" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                <Button x:Name="btnDeleteFam" ToolTip="Eliminar la familia seleccionada" Margin="7" Height="40" Width="auto" Click="btn_ElimFamilia" Style="{StaticResource ButtonFormRed}" Background="#880000" Foreground="#EEEEEE">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Trash" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Eliminar Familia" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
             </DockPanel>
 
         </Grid>
