--- a/Vistas/winABMUMedidas.xaml
+++ b/Vistas/winABMUMedidas.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Vistas.winABMUMedidas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="winABMUMedidas"  MinHeight="520" MinWidth="500" Height="520" Width="500" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
@@ -52,18 +53,24 @@
                     <ColumnDefinition Width="30*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="Unidades de medida" Style="{StaticResource FormTitle}" FontSize="26" HorizontalAlignment="Left" Margin="20,0,0,0" Width="280"></Label>
-
-                <Button Grid.Column="1" x:Name="btnAddUM" HorizontalAlignment="Right" ToolTip="Agregar una nueva UM" Content="+ Nueva UM" Margin="20,0" Height="30" Width="130" Click="btn_NuevaUM" Style="{StaticResource ButtonFormBlack}" ></Button>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="BalanceScale" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Unidades de Medida" Style="{StaticResource FormTitle}" FontSize="23"></Label>
+                </DockPanel>
+                
+                <Button Grid.Column="1" x:Name="btnAddUM" HorizontalAlignment="Right" ToolTip="Agregar una nueva UM" Content="+ Nueva UM" Margin="20,0" Click="btn_NuevaUM" Style="{StaticResource ButtonFormBlack}" ></Button>
             </Grid>
 
             <StackPanel Grid.Row="1">
-                <Label Content="Buscar por Unidad de medida:" HorizontalAlignment="center" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                <DockPanel HorizontalAlignment="center">
+                    <fa:ImageAwesome Icon="Search" Foreground="#bfbfbf" Height="20" HorizontalAlignment="Center"></fa:ImageAwesome>
+                    <Label Content="Buscar por UM:" HorizontalAlignment="Left" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                </DockPanel>
                 <TextBox Margin="10,0" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
             </StackPanel>
 
 
-            <ListView Grid.Row="2" Name="lvwUM" Width="350" VerticalAlignment="Top" HorizontalAlignment="Center" Height="240" ItemsSource="{Binding Source= {StaticResource VISTA_UM}}" IsSynchronizedWithCurrentItem="True" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" >
+            <ListView Grid.Row="2" Name="lvwUM" Width="350" VerticalAlignment="Top" HorizontalAlignment="Center" Height="240" ItemsSource="{Binding Source= {StaticResource VISTA_UM}}" IsSynchronizedWithCurrentItem="True" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" >
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
@@ -109,8 +116,22 @@
             </ListView>
 
             <DockPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1">
-                <Button x:Name="btnModifUM" ToolTip="Actualizar la UM seleccionada" Content="Actualizar UM" Margin="7" Height="40" Width="150" Click="btn_ModifUM" Style="{StaticResource ButtonFormBlack}"></Button>
-                <Button x:Name="btnDeleteUM" ToolTip="Eliminar la UM seleccionada" Content="Eliminar UM" Margin="7" Height="40" Width="150" Click="btn_ElimUM" Style="{StaticResource ButtonFormBlack}" Background="#880000" Foreground="#EEEEEE"></Button>
+                <Button x:Name="btnModifUM" ToolTip="Actualizar la UM seleccionada" Margin="7" Click="btn_ModifUM" Style="{StaticResource ButtonFormBlack}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Pencil" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Actualizar UM" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                <Button x:Name="btnDeleteUM" ToolTip="Eliminar la UM seleccionada" Margin="7" Click="btn_ElimUM" Style="{StaticResource ButtonFormRed}" Background="#880000" Foreground="#EEEEEE">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Trash" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Eliminar UM" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
             </DockPanel>
 
         </Grid>
