--- a/Vistas/winABMUsuarios.xaml
+++ b/Vistas/winABMUsuarios.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="winABMUsuarios" MinHeight="520" MinWidth="700" Height="520" Width="700" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
     <Window.Resources>
@@ -52,23 +53,29 @@
                     <ColumnDefinition Width="50*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="Usuarios" Style="{StaticResource FormTitle}" FontSize="26" HorizontalAlignment="Left" Margin="20,0,0,10"></Label>
+                <DockPanel Grid.Column="0" Margin="20,0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <fa:ImageAwesome Icon="User" Height="27" Foreground="White" Margin="7,0"></fa:ImageAwesome>
+                    <Label Content="Usuarios" Style="{StaticResource FormTitle}" FontSize="26"></Label>
+                </DockPanel>
                 <!-- elemento búsqueda
                 <DockPanel Grid.Column="1" HorizontalAlignment="Center">
                     <TextBox x:Name="txtSearchUser" Height="20" Width="120" Style="{StaticResource StyleTextBoxForm}" FontSize="10" TextChanged="txtSearchUser_TextChanged" />
                     <Label Content="🔍" Style="{StaticResource StyleLabelForm}" FontFamily="Segoe UI Emoji" HorizontalAlignment="Left"/>
                 </DockPanel>
                 -->
-                <Button Grid.Column="1" x:Name="btnAddUsr" HorizontalAlignment="Right" ToolTip="Agregar un nuevo usuario" Content="+ Nuevo Usuario" Margin="20,0" Height="30" Width="130" Click="btn_NuevoUsuario" Style="{StaticResource ButtonFormBlack}" ></Button>
+                <Button Grid.Column="1" x:Name="btnAddUsr" HorizontalAlignment="Right" ToolTip="Agregar un nuevo usuario" Content="+ Nuevo Usuario" Margin="20,0" Click="btn_NuevoUsuario" Style="{StaticResource ButtonFormBlack}" ></Button>
             </Grid>
             
             <StackPanel Grid.Row="1">
-                <Label Content="Buscar por usuario:" HorizontalAlignment="center" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                <DockPanel HorizontalAlignment="center">
+                    <fa:ImageAwesome Icon="Search" Foreground="#bfbfbf" Height="20" HorizontalAlignment="Center"></fa:ImageAwesome>
+                    <Label Content="Buscar por usuario:" HorizontalAlignment="Left" Style="{StaticResource StyleLabelForm}" VerticalAlignment="Center"></Label>
+                </DockPanel>
                 <TextBox Margin="10,0" x:Name="txtSearch" Width="200" HorizontalAlignment="Center" Style="{StaticResource StyleTextBoxForm}" TextChanged="txtSearch_TextChanged"></TextBox>
             </StackPanel>
-            
-                
-                <ListView Grid.Row="2" Name="lvgUsuarios" Width="600" VerticalAlignment="Top" HorizontalAlignment="Center" Height="240" ItemsSource="{Binding Source= {StaticResource VISTA_USUARIOS}}" IsSynchronizedWithCurrentItem="True" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" >
+
+
+            <ListView Grid.Row="2" Name="lvgUsuarios" Width="600" VerticalAlignment="Top" HorizontalAlignment="Center" Height="220" ItemsSource="{Binding Source= {StaticResource VISTA_USUARIOS}}" IsSynchronizedWithCurrentItem="True" Background="#232325" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" >
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
@@ -115,8 +122,22 @@
                 </ListView>
             
             <DockPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1">
-                <Button x:Name="btnModifUsr" ToolTip="Actualizar el usuario seleccionado" Content="Actualizar Usuario" Margin="7" Height="40" Width="150" Click="btn_ModifUsuario" Style="{StaticResource ButtonFormBlack}"></Button>
-                <Button x:Name="btnDeleteusr" ToolTip="Eliminar el usuario seleccionado" Content="Eliminar Usuario" Margin="7" Height="40" Width="150" Click="btn_ElimUsuario" Style="{StaticResource ButtonFormBlack}" Background="#880000" Foreground="#EEEEEE"></Button>
+                <Button x:Name="btnModifUsr" ToolTip="Actualizar el usuario seleccionado" Margin="7" Click="btn_ModifUsuario" Style="{StaticResource ButtonFormBlack}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Pencil" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Actualizar Usuario" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
+                <Button x:Name="btnDeleteusr" ToolTip="Eliminar el usuario seleccionado" Margin="7" Click="btn_ElimUsuario" Style="{StaticResource ButtonFormRed}">
+                    <Button.Content>
+                        <DockPanel>
+                            <fa:ImageAwesome Icon="Trash" Height="14" Foreground="White" Margin="0,0,7,0"></fa:ImageAwesome>
+                            <TextBlock Text="Eliminar Usuario" FontSize="14" Foreground="white"></TextBlock>
+                        </DockPanel>
+                    </Button.Content>
+                </Button>
             </DockPanel>
             
         </Grid>
