--- a/Vistas/winAdminMenu.xaml
+++ b/Vistas/winAdminMenu.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="Vistas.winAdminMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         Title="Menú de Administrador - NOMBRE DE LA EMPRESA" WindowStyle="None" Height="464" Width="833" Background="#FF313131" AllowsTransparency="True" MinWidth="833" MouseLeftButtonDown="moveWindow" MinHeight="464" WindowState="Normal"  Topmost="False" WindowStartupLocation="CenterScreen">
+        x:Name="window" Title="Menú de Administración - HOLDEM SISTEMA DE GESTIÓN" WindowStyle="None" Style="{StaticResource MainWindowStyle}" WindowState="normal" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style TargetType="ToolTip">
             <Setter Property="Background" Value="Black"></Setter>
@@ -9,11 +10,13 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-            <Ellipse Height="15" HorizontalAlignment="Right" ToolTip="Cerrar ventana" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-            <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Maximizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0"  MouseLeftButtonDown="minimizeWindow"/>
-            <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
-        </DockPanel>
+        <Border Style="{StaticResource MainGridStyle}">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" ToolTip="Cerrar" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="btnLogout_Click_1"/>
+                <Ellipse Height="15" ToolTip="Mininmizar" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="Menú de Administración - HOLDEM SISTEMA DE GESTIÓN" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+        </Border>
         <!--menú superior-->
         <!--Grid de menú principal-->
         <Grid HorizontalAlignment="Stretch" Margin="0,40,0,0" Name="mainGrid" VerticalAlignment="Stretch" Height="auto" Width="auto">
@@ -23,67 +26,89 @@
             </Grid.ColumnDefinitions>
 
             <!--Grid Botones-->
-            <Grid Grid.ColumnSpan="1" Background="#FF393939">
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="325*" />
-                    <RowDefinition Height="100*" />
-                </Grid.RowDefinitions>
-                <StackPanel Orientation="Vertical" VerticalAlignment="Top" MinWidth="0" Height="325">
-                    <RadioButton ToolTip="Volver al inicio" Content="Inicio" FontSize="20" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb1" MouseEnter="rb1_MouseEnter"></RadioButton>
-                    <RadioButton ToolTip="Acceder al módulo de gestión de usuarios" Content="Gestion de Usuarios" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb2" MouseEnter="rb2_MouseEnter" Click="openUsrMenu"></RadioButton>
-                    <RadioButton ToolTip="Acceder al módulo de gestión de artículos" Content="Gestion de Articulo" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb3" MouseEnter="rb3_MouseEnter" Click="rb3_Click"></RadioButton>
-                    <RadioButton ToolTip="Acceder al módulo de gestión de familias" Content="Gestion de Familia" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Name="rb4" MouseEnter="rb4_MouseEnter" Click="openFamMenu"></RadioButton>
-                    <RadioButton ToolTip="Acceder al módulo de gestión de categorías" Content="Gestion de Categoria" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Name="rb5" MouseEnter="rb5_MouseEnter" Click="openCatMenu"></RadioButton>
-                    <RadioButton ToolTip="Acceder al módulo de gestión de unidades de medida" Content="Gestion de Unidad de Medidas" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Name="rb6" MouseEnter="rb6_MouseEnter" Click="openUMMenu"></RadioButton>
+            <Grid>
+                <Border CornerRadius="5" Background="#FF393939" HorizontalAlignment="Stretch" Margin="3">
+                    
+                </Border>
+                
+                <StackPanel Orientation="Vertical" VerticalAlignment="Top" MinWidth="0" Height="auto">
+                    <RadioButton Content="Inicio" FontWeight="Bold" FontSize="30" Height="70" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb1" MouseEnter="rb1_MouseEnter" Padding="0,10,0,0"></RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de usuarios" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb2" MouseEnter="rb2_MouseEnter" Click="openUsrMenu">
+                        <RadioButton.Content>
+                            <DockPanel Margin="2,0,0,0">
+                                <fa:ImageAwesome Icon="User" Foreground="#ffd46f" Height="18" Margin="0,0,20,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Usuarios"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de artículos" FontSize="12" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb3" MouseEnter="rb3_MouseEnter" Click="rb3_Click">
+                        <RadioButton.Content>
+                            <DockPanel>
+                                <fa:ImageAwesome Icon="ShoppingBasket" Foreground="#ffd46f" Height="18" Margin="0,0,20,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Artículos"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de familias" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Name="rb4" MouseEnter="rb4_MouseEnter" Click="openFamMenu">
+                        <RadioButton.Content>
+                            <DockPanel>
+                                <fa:ImageAwesome Icon="Glass" Foreground="#ffd46f" Height="18" Margin="0,0,20,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Familias"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de categorías" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Name="rb5" MouseEnter="rb5_MouseEnter" Click="openCatMenu">
+                        <RadioButton.Content>
+                            <DockPanel>
+                                <fa:ImageAwesome Icon="Cubes" Foreground="#ffd46f" Height="18" Margin="0,0,20,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Categorías"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de unidades de medida" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Name="rb6" MouseEnter="rb6_MouseEnter" Click="openUMMenu">
+                        <RadioButton.Content>
+                            <DockPanel>
+                                <fa:ImageAwesome Icon="BalanceScale" Foreground="#ffd46f" Height="18" Margin="0,0,20,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Medidas"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
                 </StackPanel>
-                <TextBlock Foreground="White" Grid.Row="1" Height="24" HorizontalAlignment="Center" Margin="0,0,0,24" Name="txbUsuario" VerticalAlignment="Bottom" />
-                <Button Name="btnLogout" ToolTip="Cerrar la actual sesión" Content="Cerrar Sesión" Height="22" FontFamily="FreeSans" FontSize="13" Width="88" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" ClipToBounds="True" Margin="7" Grid.Row="1" VerticalAlignment="Bottom" Click="btnLogout_Click_1" />
-                <Image Name="image1" Stretch="Fill" Source="/Vistas;component/Images/icono-usuario.png" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,54" Height="46" Width="50" />
+                <StackPanel Grid.Row="1" Margin="10,30" VerticalAlignment="Bottom">
+                    <TextBlock Foreground="White" Height="24" FontSize="16" HorizontalAlignment="Center" Name="txbUsuario" Margin="0,10"/>
+                    <Button Name="btnLogout" ToolTip="Cerrar la actual sesión" Width="auto" Style="{StaticResource ButtonLogout}" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" Grid.Row="1" HorizontalAlignment="Center" Click="btnLogout_Click_1">
+                        <Button.Content>
+                            <DockPanel Margin="3">
+                                <fa:ImageAwesome Icon="SignOut" Foreground="white" Height="12" Margin="5,0" VerticalAlignment="Center"></fa:ImageAwesome>
+                                <TextBlock Text="Cerrar Sesión" Foreground="white" FontSize="14" VerticalAlignment="Center"></TextBlock>
+                            </DockPanel>
+                        </Button.Content>
+                    </Button>
+                </StackPanel>
+                
             </Grid>
             <Image Name="logoholdem" Source="/Vistas;component/Images/holdemlogo.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
 
             <!--Grid de Gestion de Usuarios-->
             <Grid Grid.Column="1" Name="griditem">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="92*" />
-                    <RowDefinition Height="333*" />
-                </Grid.RowDefinitions>
-                <TextBlock  Name="textBlock2" Text="USUARIO" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Image Name="imgUsuarios" Source="/Vistas;component/Images/usuarios.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
             </Grid>
 
             <Grid Grid.Column="1" Name="grdArticulo">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="92*" />
-                    <RowDefinition Height="333*" />
-                </Grid.RowDefinitions>
-                <TextBlock  Name="txtArticulo" Text="ARTICULO" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Image Name="imgArticulos" Source="/Vistas;component/Images/articulos.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
 
             </Grid>
 
             <Grid Grid.Column="1" Name="grdFamilia">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="92*" />
-                    <RowDefinition Height="333*" />
-                </Grid.RowDefinitions>
-                <TextBlock  Name="txtFamilia" Text="FAMILIA" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Image Name="imgFamilias" Source="/Vistas;component/Images/familia.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
             </Grid>
 
             <Grid Grid.Column="1" Name="grdCategoria">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="92*" />
-                    <RowDefinition Height="333*" />
-                </Grid.RowDefinitions>
-                <TextBlock  Name="txtCategoria" Text="CATEGORIA" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Image Name="imgCategorias" Source="/Vistas;component/Images/categorias.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
             </Grid>
 
             <Grid Grid.Column="1" Name="grdUnidad">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="92*" />
-                    <RowDefinition Height="333*" />
-                </Grid.RowDefinitions>
-                <TextBlock  Name="txtUnidad" Text="UNIDAD DE MEDIDA" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                
+                <Image Name="imgUMs" Source="/Vistas;component/Images/ums.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
             </Grid>
 
         </Grid>
