--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="650" Width="530" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="700" Width="530" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Articulo"
@@ -51,12 +51,11 @@
                                 <RowDefinition Height="12*" />
                                 <RowDefinition Height="12*" />
                                 <RowDefinition Height="12*" />
-                                <RowDefinition Height="24*" />
-                                <RowDefinition Height="24*" />
+                                <RowDefinition Height="40*" />
                         </Grid.RowDefinitions>
 
-                            <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Artículo" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
-                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="53,0,43,7" Width="237" />
+                            <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Artículo" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="auto" />
+                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="0,0,0,10" Width="auto" />
 
                             <Label HorizontalAlignment="Right" Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
                             <Label HorizontalAlignment="Right" Grid.Row="2" Content="Unidad de Medida:" Name="label3" Style="{StaticResource StyleLabelForm}" />
@@ -79,25 +78,21 @@
                         <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboCategoria" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1" BorderBrush="#FFE53535" Width="120" />
 
 
-                        <Label Grid.Row="6" Grid.ColumnSpan="2" VerticalAlignment="Top" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" Margin="10,4,10,0" Grid.RowSpan="2" />
-                            <TextBox Grid.Row="7" Grid.ColumnSpan="2" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}" Name="txtDescripcion" 
-                                 HorizontalAlignment="Center" VerticalAlignment="Bottom" VerticalContentAlignment="Top" Width="191" MinHeight="60" FontSize="13">
+                        <Label Grid.Row="6" VerticalAlignment="Top" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" Margin="10,4,10,0" Grid.RowSpan="2" />
+                            <TextBox Grid.Row="6" Grid.Column="1" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}" Name="txtDescripcion" 
+                                 HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Width="auto" FontSize="13">
                                 <TextBox.Text>
                                     <Binding Path="Art_Descrip" UpdateSourceTrigger="PropertyChanged"
                                  ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
                                 </TextBox.Text>
                             </TextBox>
-                        <Label Grid.Row="8"  VerticalAlignment="Top" Content="Imagen del Artículo:" Name="lblImagen" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" Margin="10,4,10,0" Grid.RowSpan="2" />
-                        <Grid Grid.Row="8" Grid.Column="2">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="12*" />
-                                <RowDefinition Height="12*" />
-                            </Grid.RowDefinitions>
-                            <Image Grid.Row="0" Name="imgArticulo"/>
-                            <Button Name="btnImagen" Grid.Row="1" ToolTip="Seleccione un archivo de imagen para su artículo" Content="SELECCIONAR IMAGEN" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center" Click="btnImagen_Click"></Button>
 
-                        </Grid>
-        
+                        <StackPanel Grid.Row="8" VerticalAlignment="Center">
+                            <Label Content="El artículo necesita una imagen" FontSize="12" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"></Label>
+                            <Button Name="btnImagen" ToolTip="Seleccione una imagen de su computadora" Content="SELECCIONAR IMAGEN" Style="{StaticResource ButtonFormBlack}" Click="btnImagen_Click"></Button>
+                        </StackPanel>    
+                        <Image Grid.Row="8" Grid.Column="1" Name="imgArticulo" Height="auto" HorizontalAlignment="Center"></Image>
+
                     </Grid>
                     
                     <!--
@@ -111,8 +106,8 @@
                 
                 <!-- grid botones-->
                 <Grid Margin="5" Grid.Row="2">
-                    <Button Name="btneditart" Grid.Column="0" Click="btnEditar_Click" ToolTip="Editar artículo con los datos ingresados" Content="EDITAR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center"></Button>
-                    <Button Name="btnagregarart" Grid.Column="0" Click="btnGuardar_Click" ToolTip="Agregar artículo con los datos ingresados" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center"></Button>
+                    <Button Name="btneditart" Grid.Column="0" Click="btnEditar_Click" ToolTip="Actualizar artículo con los datos ingresados" Content="ACTUALIZAR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="auto" HorizontalAlignment="Center"></Button>
+                    <Button Name="btnagregarart" Grid.Column="0" Click="btnGuardar_Click" ToolTip="Agregar artículo con los datos ingresados" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="auto" HorizontalAlignment="Center"></Button>
                 </Grid>
             </Grid>            
         </Grid>
