--- a/Vistas/winAuditorMenu.xaml
+++ b/Vistas/winAuditorMenu.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="Vistas.winAuditorMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winAuditorMenu" WindowStyle="None" Height="464" Width="833" Background="#FF313131" AllowsTransparency="True" MinWidth="833" MouseLeftButtonDown="moveWindow" MinHeight="464" WindowState="Normal"  Topmost="False" WindowStartupLocation="CenterScreen">
+        xmlns:fa="http://schemas.fontawesome.io/icons/"        
+        Title="Menú de Auditoría - HOLDEM SISTEMA DE GESTIÓN" x:Name="window" WindowStyle="None" Style="{StaticResource MainWindowStyle}" Height="720" Width="1280" Background="#FF313131"  WindowState="Normal" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style TargetType="ToolTip">
             <Setter Property="Background" Value="Black"></Setter>
@@ -9,11 +10,13 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-            <Ellipse Height="15" HorizontalAlignment="Right" ToolTip="Cerrar ventana" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-            <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Maximizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0"  MouseLeftButtonDown="minimizeWindow"/>
-            <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
-        </DockPanel>
+        <Border Style="{StaticResource MainGridStyle}">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" ToolTip="Cerrar" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="btnLogout_Click_1"/>
+                <Ellipse Height="15" ToolTip="Mininmizar" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="Menú de Auditoría - HOLDEM SISTEMA DE GESTIÓN" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+        </Border>
 
         <!--Grid de menú principal-->
         <Grid HorizontalAlignment="Stretch" Margin="0,40,0,0" Name="mainGrid" VerticalAlignment="Stretch" Height="auto" Width="auto">
@@ -23,22 +26,50 @@
             </Grid.ColumnDefinitions>
 
             <!--Grid Botones-->
-            <Grid Grid.ColumnSpan="1" Background="#FF393939">
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="325*" />
-                    <RowDefinition Height="100*" />
-                </Grid.RowDefinitions>
+            <Grid>
+                <Border CornerRadius="5" Background="#FF393939" HorizontalAlignment="Stretch" Margin="3">
+                    
+                </Border>
+                
                 <StackPanel Orientation="Vertical" VerticalAlignment="Top" MinWidth="0" Height="325">
-                    <RadioButton ToolTip="Volver al inicio" Content="Inicio" FontSize="20" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb1" MouseEnter="rb1_MouseEnter"></RadioButton>
-                    <RadioButton ToolTip="Acceder al modulo de gestión de usuarios" Content="Gestion de Usuarios" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb2" MouseEnter="rb2_MouseEnter" Click="openUsrMenu"></RadioButton>
-                    <RadioButton ToolTip="Acceder al historial de inicios de sesión" Content="Historial de logs" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb3" MouseEnter="rb3_MouseEnter" Click="openWinLogs"></RadioButton>
+                    <RadioButton ToolTip="Volver al inicio" Content="Inicio" FontWeight="Bold" FontSize="30" Height="70" Padding="0,10,0,0" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb1" MouseEnter="rb1_MouseEnter"></RadioButton>
+                    <RadioButton ToolTip="Acceder al modulo de gestión de usuarios" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb2" MouseEnter="rb2_MouseEnter" Click="openUsrMenu">
+                        <RadioButton.Content>
+                            <DockPanel Margin="0,0,0,0">
+                                <fa:ImageAwesome Icon="PencilSquareOutline" Foreground="#ffd46f" Height="18" Margin="0,0,10,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Usuarios"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton ToolTip="Acceder al historial de inicios de sesión" Height="55" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb3" MouseEnter="rb3_MouseEnter" Click="openWinLogs">
+                        <RadioButton.Content>
+                            <DockPanel Margin="0,0,0,0">
+                                <fa:ImageAwesome Icon="History" Foreground="#ffd46f" Height="18" Margin="0,0,10,0"></fa:ImageAwesome>
+                                <TextBlock Foreground="White" FontSize="18" Text="Historial de Logs"></TextBlock>
+                            </DockPanel>
+                        </RadioButton.Content>
+                    </RadioButton>
                 </StackPanel>
-                <TextBlock Foreground="White" Grid.Row="1" Height="24" HorizontalAlignment="Center" Margin="0,0,0,24" Name="txbUsuario" VerticalAlignment="Bottom" />
-                <Button Name="btnLogout" ToolTip="Cerrar sesión actual" Content="Cerrar Sesión" Height="22" FontFamily="FreeSans" FontSize="13" Width="88" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" ClipToBounds="True" Margin="7" Grid.Row="1" VerticalAlignment="Bottom" Click="btnLogout_Click_1" />
-                <Image Name="image1" Stretch="Fill" Source="/Vistas;component/Images/icono-usuario.png" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,54" Height="46" Width="50" />
+                <StackPanel Grid.Row="1" Margin="10,30" VerticalAlignment="Bottom">
+                    <TextBlock Foreground="White" Height="24" FontSize="16" HorizontalAlignment="Center" Name="txbUsuario" Margin="0,10"/>
+                    <Button Name="btnLogout" ToolTip="Cerrar la actual sesión" Width="auto" Style="{StaticResource ButtonLogout}" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" Grid.Row="1" HorizontalAlignment="Center" Click="btnLogout_Click_1">
+                        <Button.Content>
+                            <DockPanel Margin="3">
+                                <fa:ImageAwesome Icon="SignOut" Foreground="white" Height="12" Margin="5,0" VerticalAlignment="Center"></fa:ImageAwesome>
+                                <TextBlock Text="Cerrar Sesión" Foreground="white" FontSize="14" VerticalAlignment="Center"></TextBlock>
+                            </DockPanel>
+                        </Button.Content>
+                    </Button>
+                </StackPanel>
             </Grid>
             <Image Name="logoholdem" Source="/Vistas;component/Images/holdemlogo.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="30,10" Opacity="1" />
+            <Grid Grid.Column="1" Name="gridUsuarios">
+                <Image Name="imgUsuarios" Source="/Vistas;component/Images/usuarios.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
+            </Grid>
+
+            <Grid Grid.Column="1" Name="grdLogs">
+                <Image Name="imgLogs" Source="/Vistas;component/Images/historial.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" DataContext="{Binding}" />
+            </Grid>
         </Grid>
     </Grid>
 </Window>
