--- a/Vistas/winBusquedaArt.xaml
+++ b/Vistas/winBusquedaArt.xaml
@@ -51,7 +51,7 @@
             </StackPanel>
 
 
-            <ListView Margin="0,40,0,0" Grid.Row="1" Background="#232323" Foreground="White" BorderBrush="Black" Name="lvwArticulos" Width="598" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Height="auto" ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" HorizontalContentAlignment="Center" IsSynchronizedWithCurrentItem="True" SelectionChanged="lvwArticulos_SelectionChanged">
+            <ListView Margin="0,40,0,0" Grid.Row="1" Background="#232323" Foreground="White" BorderBrush="Black" Name="lvwArticulos" Width="598" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Height="230" ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" HorizontalContentAlignment="Center" IsSynchronizedWithCurrentItem="True" SelectionChanged="lvwArticulos_SelectionChanged">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Template">
