--- a/Vistas/winFamilias.xaml
+++ b/Vistas/winFamilias.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winFamilias" Height="350" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="350" MinWidth="400">
+        Title="Alta de Nueva Familia" Height="350" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="350" MinWidth="400">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Fam"
@@ -38,9 +38,9 @@
                 </Grid.RowDefinitions>
 
                 <Label Name="lblNewFamTitle" Content="Nueva Familia"  Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Margin="94,23,90,59" />
-                <Label Name="lblNewFamDescrip" Content="Ingrese los datos de la Familia"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,72,69,33" Width="237" />
+                <Label Name="lblNewFamDescrip" Content="Ingrese los datos de la Familia"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="auto" Margin="61,64,69,36" />
 
-                <Label Content="Descripción " Name="lblFamDescrip" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
+                <Label Content="Descripción " Name="lblFamDescrip" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="auto" />
                 <TextBox Name="txtFamDescrip" Grid.Row="1" Grid.Column="1" DataContext="{StaticResource Data_Fam}" Style="{StaticResource EstiloError}">
                     <TextBox.Text>
                         <Binding Path="Fam_Descrip" UpdateSourceTrigger="PropertyChanged"
