--- a/Vistas/winLogin.xaml
+++ b/Vistas/winLogin.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         xmlns:UC="clr-namespace:Vistas.Controls"
-    Title="Bienvenido" Style="{StaticResource BasicWindowStyle}" WindowStyle="None" AllowsTransparency="True" Background="#00000000" Height="580" Width="424" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+    Title="HOLDEM - Sistema de Administración" Style="{StaticResource BasicWindowStyle}" WindowStyle="None" AllowsTransparency="True" Background="#00000000" Height="580" Width="424" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Window.Resources>
         <Style TargetType="ToolTip">
             <Setter Property="Background" Value="Black"></Setter>
