--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -1,8 +1,7 @@
 ﻿<Window x:Class="Vistas.winMesas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="1280" MinHeight="720" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen"
-        WindowState="Maximized"
+        Title="winMesas"  x:Name="window" MouseLeftButtonDown="moveWindow" Width="1200" Height="680" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen"
         xmlns:converter="clr-namespace:Vistas"
         >
         <!--xmlns:svc="clr-namespace:Vistas;assembly=winMesas"-->
@@ -51,50 +50,65 @@
                 </Grid.ColumnDefinitions>
                 
                 <!--Sección de los estados-->
-                <StackPanel x:Name="stkEstados" Margin="20,0">
-                    <StackPanel.Resources>
-                        <converter:ConversorDeEstados x:Key="conversorDeEstados"/>
-                    </StackPanel.Resources>
-                    <Label x:Name="lblEstados" Content="Estados" FontSize="28" Style="{StaticResource FormTitle}"></Label>
-                    <ListBox                         
-                        x:Name="lstEstados" 
-                        FontSize="20" 
-                        Padding="0,20"
-                        Height="auto" 
-                        Width="250" 
-                        Margin="40" 
-                        Style="{StaticResource StyleListBox}"
-                        ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath=estado/@name}"
-                        > 
-                    </ListBox>
+                <Border Background="#151619" Margin="20" CornerRadius="15">
+                    <StackPanel x:Name="stkEstados">
 
-                    <Label x:Name="lblSeleccionado" Content="Seleccionado:" FontSize="18" Style="{StaticResource FormTitle}"></Label>
-                    <Ellipse Margin="10" Height="50" x:Name="elpSeleccion" Width="50" Fill="{Binding ElementName=lstEstados, Path=SelectedValue, Converter={StaticResource conversorDeEstados}}" />
-                </StackPanel>
+                        <StackPanel.Resources>
+                            <converter:ConversorDeEstados x:Key="conversorDeEstados"/>
+                        </StackPanel.Resources>
+
+                        <Label x:Name="lblEstados" Content="Estados" FontSize="35" Style="{StaticResource FormTitle}"></Label>
+
+                        <Grid Margin="30,20" Height="400" VerticalAlignment="Center">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+
+                            <Label Grid.Row="0"  Content="Libre" Height="50" Width="auto" Background="#8df78d" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="1"  Content="Reservado" Height="50" Width="auto" Background="#51ad45" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="2"  Content="Ocupado" Height="50" Width="auto" Background="#fa6761" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="3"  Content="En espera" Height="50" Width="auto" Background="#a4a6b3" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="4"  Content="Pidiendo" Height="50" Width="auto" Background="#ae77d4" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="5"  Content="Servido" Height="50" Width="auto" Background="#ffa154" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="6"  Content="Esperando cuenta" Height="50" Width="auto" Background="#78a0ff" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                            <Label Grid.Row="7"  Content="Pagando" Height="50" Width="auto" Background="#f5db58" Foreground="black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20"></Label>
+                        </Grid>
+                    </StackPanel>
+
+                </Border>
 
                 <!--Sección de las Mesas-->
                 <Grid x:Name="grdMesas"  Grid.Column="1" Margin="20,7,20,-7" Loaded="grdMesas_Loaded"/>
-                <Popup Name="Dialogo" StaysOpen="True" Placement="Center" Width="300" Height="500">
-                    <Grid>
+                <Popup Name="Dialogo" StaysOpen="True" Placement="Center" Width="auto" Height="auto" AllowsTransparency="true">
+                    <Grid>                        
+                        <Border Style="{StaticResource MainGridStyle}">
+                        </Border>
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="200*"/>
-                            <RowDefinition Height="100*"/>
-                            <RowDefinition Height="100*"/>
-                        </Grid.RowDefinitions>
-                        
+                        <Grid Margin="30" Width="auto" Height="auto">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="200*"/>
+                                <RowDefinition Height="100*"/>
+                                <RowDefinition Height="100*"/>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Name="txbEstado" HorizontalAlignment="Center"  Text="Seleccione un estado:"  Style="{StaticResource FormDescription}" Grid.Row="0"  Width="237" />
+
+                            <ComboBox Grid.Row="1" HorizontalAlignment="Center" Height="25" Margin="25" Name="cmbEstadoMesas" Width="130" ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath= estado/@name}"/>
 
 
-                        <TextBlock Name="txbEstado" HorizontalAlignment="Center"  Text="Seleccione un estado"  Style="{StaticResource FormDescription}" Grid.Row="0"  Width="237" />
+                            <DockPanel Grid.Row="2" Margin="5,5" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                                <Button Content="ACTUALIZAR" Name="btnActualizar"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnActualizar_Click"></Button>
+                                <Button Content="CANCELAR" Name="btnCancelar"   HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnCancelar_Click"></Button>
 
-                        <ComboBox Grid.Row="1" Height="25" Name="cmbEstadoMesas" Width="130" ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath= estado/@name}"/>
-
-
-                        <DockPanel Grid.Row="2" >
-                            <Button Content="ACTUALIZAR" Name="btnActualizar"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnActualizar_Click"></Button>
-                            <Button Content="CANCELAR" Name="btnCancelar"   HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnCancelar_Click"></Button>
-
-                        </DockPanel>
+                            </DockPanel>
+                        </Grid>
                     </Grid>
 
 
