--- a/Vistas/winUsuarios.xaml
+++ b/Vistas/winUsuarios.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winUsuarios" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
+        Title="Alta de Nuevo Usuario" WindowStyle="None" AllowsTransparency="True" Style="{StaticResource MainWindowStyle}" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Usuario"
@@ -44,7 +44,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Name="lblNewUserTitle" Content="Nuevo Usuario"  Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Margin="94,23,78,59" />
-                <Label Grid.Row="0" Name="lblNewUserDescrip" Content="Ingrese los datos del Usuario"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,71,64,33" Width="237" />
+                <Label Name="lblNewUserDescrip" Content="Ingrese los datos del Usuario"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="auto" Margin="70,88,68,35" />
 
                 <Label Content="Apellido y Nombre" Name="lblApNombre" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
                 <TextBox Name="txtApellidoNombre" Grid.Row="1" Grid.Column="1" Style="{StaticResource EstiloError}" DataContext="{StaticResource Data_Usuario}">
@@ -91,8 +91,8 @@
 
             </Grid>
 
-            <Button Grid.Row="1" ToolTip="Guardar un nuevo usuario" Content="GUARDAR" Name="btnGuardar" FontWeight="Bold" Click="btnGuardar_Click" Style="{StaticResource ButtonFormBlack}"/>
-            <Button Grid.Row="1" ToolTip="Actualizar los datos del usuario" Content="ACTUALIZAR" FontWeight="Bold" Name="btnEditar" Click="btnEditar_Click" Style="{StaticResource ButtonFormBlack}"/>
+            <Button Grid.Row="1" FontWeight="Bold" ToolTip="Guardar un nuevo usuario" Content="GUARDAR" Name="btnGuardar" Click="btnGuardar_Click" Style="{StaticResource ButtonFormBlack}"/>
+            <Button Grid.Row="1" FontWeight="bold" ToolTip="Actualizar los datos del usuario" Content="ACTUALIZAR" Name="btnEditar" Click="btnEditar_Click" Style="{StaticResource ButtonFormBlack}"/>
 
         </Grid>
     </Grid>
